fix asset name
Signed-off-by: heyoulin <heyoulin@gmail.com>