@@ -123,7 +123,7 @@ public final class GwtServerUtil {
         case CHAR:
             for (String value : defaultValues) {
                 if (!value.trim().isEmpty()) {
-                    values.add(new Character(value.charAt(0)));
+                    values.add(Character.valueOf(value.charAt(0)));
                 }
             }
             return values.toArray(new Character[] {});
